# LSM-P2

./: .gitignore  .gitmodules  README.md  main.py  pyproject.toml  setup_mlflow.py
Examples/template/: poisson_template.py
Experiments/cubic/: cubic.py  submit_cubic.sh
Experiments/cubic/output/: plot_result.py
Experiments/mpi_cubic/: compute_mpi_cubic.py  plot_mpi_cubic.py
Experiments/mpi_sliced/: compute_mpi_sliced.py  plot_mpi_sliced.py
Experiments/sequential/: benchmark_numba.py  compute_sequential.py  plot_sequential.py
Experiments/template/: sequential.py  submit_sequential.sh
data/sequential/: results_N100_iter20_jacobi.parquet  results_N10_iter18_jacobi.parquet  results_N10_iter18_jacobi_grid.npy  results_N10_iter5_jacobi.parquet  results_N10_iter5_view.parquet  results_N10_iter5_view_grid.npy
docs/source/: api_reference.rst  conf.py  sg_execution_times.rst
src/LSM/: __init__.py  base.py  datastructures.py  kernels.py  mpi_cubic.py  mpi_sliced.py  mpi_strategies.py  problems.py  sequential.py  solvers.py
src/Poisson/: __init__.py  base.py  datastructures.py  kernels.py  mpi_sliced.py  problems.py  sequential.py
src/utils/: __init__.py  cli.py  io.py  plotting.py
